--- a/index.css
+++ b/index.css
@@ -31,44 +31,55 @@
     
     background-color:#be98aa;
 }
+img{
+  max-width: 100%;
+}
 .img1{
   grid-area: i1;
-  display: grid;
+  display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 padding: 2rem;
-
+background-color:#948191;
+height: 680px;
 }
 .imgOfTetris{
   align-self:center;
 }
 .img2{
   grid-area: i2;
-  display: grid;
+  display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 padding: 2rem;
+background-color:#948191;
+height: 680px;
 }
 .img3{
   grid-area: i3;
-  display: grid;
+  display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 padding: 2rem;
+background-color:#948191;
+height: 680px;
 }
 .img4{
   grid-area: i4;
-  display: grid;
+  display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 padding: 2rem;
+background-color:#948191;
+height: 680px;
 }
 
 section{
+  padding: 2rem;
   max-width: 100%;
   background-color:#be98aa;
   grid-area: mn; 
