--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
   }
   
-  body{  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+  
   
   header, nav, main, aside,footer{
    color: white;
@@ -14,7 +14,7 @@
   }
   
   header { grid-area: hd;
-    
+    font-family: 'Sofia';font-size: 22px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
@@ -25,12 +25,18 @@
   { 
     grid-area: nv;
     background-color:#948191;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1rem;
+
   }
   
   main { grid-area: mn; 
-    
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.5rem;
+    line-height: 1.2em;
     background-color:#be98aa;
 }
+
 img{
   max-width: 100%;
 }
@@ -99,19 +105,25 @@ section{
 }
 
 .img{
+  position: relative;
   max-width: 100%; 
  display: flex;
- flex-direction: row;
+ flex-direction: column;
  justify-content: center;
  align-items: center;
 }
-#img{
+
+#imgt{
+ 
+  position: absolute;
   
-    object-fit: cover;
 }
   
   .sidebar
    {
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.5rem;
+
       grid-area: sd; 
       background-color:#948191;
       display: flex;
@@ -125,6 +137,9 @@ section{
   
   .form 
   {
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.5rem;
+
      grid-area: ad;
      background-color:#948191;
      display: flex;
@@ -136,6 +151,11 @@ section{
   { 
     grid-area: ft ;
     background-color:#9e687e;
+    font-family: 'Sofia';font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   
   nav ul {
